@@ -18,6 +18,11 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 MA 02110-1301, USA.
 
+2006-02-21  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/powerpc32/vmx/copyi.asm: New file.
+	* mpn/powerpc32/vmx/copyd.asm: New file.
+
 2006-02-17  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/alpha/ev6/nails/aors_n.asm (CYSH): Import proper setting from
